# synapse-super-invites

./: .gitignore  README.md  alembic.ini  example_server.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
scripts-dev/: lint.sh
synapse_super_invites/: __init__.py  alembic.ini  config.py
synapse_super_invites/migration/: env.py
synapse_super_invites/migration/versions/: 25e4ec3cea32_added_token_table.py  8c8c90d89eac_add_error_logs_to_acceptance.py
synapse_super_invites/model/: __init__.py
synapse_super_invites/resource/: __init__.py  base.py  info.py  redeem.py  share_link.py  share_link_template.html  tokens.py  web_access.py
synapse_super_invites/static/: index.html  script.js
synapse_super_invites/templates/: share_link.html
synapse_super_invites/templates/parts/: extra_header.html
tests/: __init__.py  example_cfg.yml  test_config.py  test_example.py  test_integrations.py  test_link_share.py
